--- a/stylesheets/layout/_header.scss
+++ b/stylesheets/layout/_header.scss
@@ -14,6 +14,7 @@
   max-height: 64px;
   -webkit-transition: max-height 0.5s cubic-bezier(0, 1, 0, 1);
   transition: max-height 0.5s cubic-bezier(0, 1, 0, 1);
+  background-color: #fff;
 
 
   &[data-expanded="true"] {
