Ajout route d'inscription + service d'envoi d'email

--- a/stylesheets/layout/_header.scss
+++ b/stylesheets/layout/_header.scss
@@ -19,7 +19,7 @@
     align-items: center;
     -webkit-box-pack: justify;
     justify-content: space-between;
-    background-color: #eee;
+    background-color: #edebd7;
     padding: 0 50px;
   }
 
