--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -19,7 +19,7 @@
 @import './layout/admin';
 
 // Components
-@import './components/form';
+@import './components/upload';
 @import './components/button';
 
 // Pages
