--- a/stylesheets/pages/_home.scss
+++ b/stylesheets/pages/_home.scss
@@ -22,8 +22,9 @@
   }
 
   #content {
-    background-color: #f0f2f5;
+    background-color: #fff;
     padding: 10px;
+    overflow: hidden;
 
     .resource {
       height: 100%;
