--- a/stylesheets/layout/_admin.scss
+++ b/stylesheets/layout/_admin.scss
@@ -1,6 +1,9 @@
 .admin {
   .admin__sidebar {
     height: calc(100vh - 98px);
+    position: fixed;
+    left: 0;
+    top: 98px;
     border-right: 1px solid #f0f2f5;
     z-index: 10;
 
@@ -18,5 +21,6 @@
     background-color: #fff;
     padding: 10px;
     overflow: hidden;
+    transition: margin 0.2s;
   }
 }
