--- a/stylesheets/pages/admin/resources/_awaiting.scss
+++ b/stylesheets/pages/admin/resources/_awaiting.scss
@@ -53,3 +53,26 @@
     }
   }
 }
+
+.user__profile-modal {
+  .user__header {
+    text-align: center;
+  }
+
+  .center {
+    width: 100%;
+    height: 100%;
+    display: -webkit-box;
+    display: flex;
+    -webkit-box-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    align-items: center;
+  }
+
+  .ant-collapse-content-box {
+    padding: 0 !important;
+    max-height: 300px;
+    overflow: auto;
+  }
+}
