--- a/stylesheets/base/_base.scss
+++ b/stylesheets/base/_base.scss
@@ -11,3 +11,11 @@
 .ant-input-prefix {
   color: rgba(0, 0, 0, .25);
 }
+
+td.center {
+  text-align: center !important;
+}
+
+td.right {
+  text-align: right !important;
+}
