Recodage de l'accueil

--- a/stylesheets/base/_base.scss
+++ b/stylesheets/base/_base.scss
@@ -1,11 +1,11 @@
 #layout {
   z-index: 1;
   background-color: transparent;
-  padding-top: 64px;
+  // padding-top: 64px;
 
-  &.layout__admin {
-    padding-top: 98px;
-  }
+  // &.layout__admin {
+  //   padding-top: 98px;
+  // }
 }
 
 .ant-input-prefix {
