--- a/stylesheets/layout/_header.scss
+++ b/stylesheets/layout/_header.scss
@@ -2,7 +2,7 @@
   background-color: #fff;
   box-shadow: 0 2px 8px #f0f1f2;
   z-index: 50;
-  position: fixed;
+  // position: fixed;
   width: 100%;
   top: 0;
   padding: 0;
