Suppresion du lazy-load pour des problèmes de compatibilité

--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -17,6 +17,7 @@
 // Layout
 @import './layout/header';
 @import './layout/admin';
+@import './layout/user';
 
 // Components
 @import './components/upload';
