--- a/stylesheets/pages/_home.scss
+++ b/stylesheets/pages/_home.scss
@@ -1,10 +1,16 @@
 .home-wrapper {
-  .home-sider {
-    overflow: hidden;
-    max-height: 100vh;
+  .home-sider-wrapper {
+    background-color: #fff;
+    border-right: 1px solid #f0f0f0;
 
-    &:hover {
-      overflow: auto;
+    .home-sider {
+      overflow: hidden;
+      border: none;
+      max-height: 100vh;
+
+      &:hover {
+        overflow: auto;
+      }
     }
   }
 
@@ -20,6 +26,7 @@
   .home-content {
     padding: 10px;
     background-color: #fff;
+    min-height: calc(100vh - 134px);
 
     .resource {
       height: 100%;
